# pathsmith

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  styles-old.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/data/: workbench.ts
src/lib/: bridge.ts  i18n.ts  notifications.ts  preferences.ts  types.ts
src/locales/: English.json  Italian.json
