[package]
name = "pathsmith"
version = "0.1.0"
description = "Small desktop app for sorting media and cleaning empty folders."
license = "MIT"
edition = "2021"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
